--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+	input[type='radio'] {
+		accent-color: #89c325;
+	}
+}
