--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
 @layer utilities {
 	input[type='radio'] {
-		accent-color: #89c325;
+		accent-color: #6ea410;
 	}
 }
